--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -9,7 +9,9 @@ jobs:
         uses: actions/checkout@v3
       - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
       - name: Setup Go Environment
-        uses: actions/setup-go@3.5.0
+        uses: actions/setup-go@v2
+        with:
+          go-version: 1.19.2
       - name: List files in the repository
         run: |
           ls ${{ github.workspace }}
