--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -25,5 +25,5 @@ jobs:
           platform: github
           path: /tmp/microshift
       - name: List the contents of cloned repository
-        run: ls -ltr /tmp/microshift/
+        run: ls /tmp/microshift/
           
