--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -16,8 +16,6 @@ jobs:
         run: |
           ls ${{ github.workspace }}
       - run: echo "🍏 This job's status is ${{ job.status }}."
-      - name: Create temp directory
-        run: mkdir -p /tmp/repo
       - name: Git Clone microshift repo
         uses: sudosubin/git-clone-action@v1.0.1
         with:
@@ -25,5 +23,5 @@ jobs:
           platform: github
           path: tmp/repo
       - name: List the contents of cloned repository
-        run: ls /tmp/repo
+        run: ls ./tmp/repo
           
