--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -18,14 +18,14 @@ jobs:
       - run: echo "🍏 This job's status is ${{ job.status }}."
       - name: Print CWD
         run: echo "$PWD"
-#       - name: Git Clone microshift repo
-#         uses: sudosubin/git-clone-action@v1.0.1
-#         with:
-#           repository: openshift/microshift
-#           platform: github
-#           path: microshift
-#       - name: List the contents of cloned repository
-#         run: ls /home/runner/work/microshift
+      - name: Git Clone microshift repo
+        uses: sudosubin/git-clone-action@v1.0.1
+        with:
+          repository: openshift/microshift
+          platform: github
+          path: ../../microshift
+      - name: List the contents of cloned repository
+        run: ls ../../microshift
 #       - name: Run make on the cloned repo
 #         run: make /home/runner/work/microshift
 #       - name: List the contents of cloned repository
