--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -33,5 +33,8 @@ jobs:
       - name: List the contents of cloned repository
         run: ls
         working-directory: ./tmp/microshift/cmd/microshift
+      - name: Run the binary
+        run: ./microshift --help
+        working-directory: ./tmp/microshift/cmd/microshift
       
           
