--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -34,7 +34,7 @@ jobs:
         run: ls
         working-directory: ./tmp/microshift/cmd/microshift
       - name: Run the binary
-        run: ./microshift run
+        run: sudo ./microshift run
         working-directory: ./tmp/microshift/cmd/microshift
       
           
