--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -18,24 +18,26 @@ jobs:
       - run: echo "🍏 This job's status is ${{ job.status }}."
       - name: Print CWD
         run: echo "$PWD"
-      - name: Git Clone microshift repo
-        uses: sudosubin/git-clone-action@v1.0.1
-        with:
-          repository: openshift/microshift
-          platform: github
-          ref: release-4.12
-          path: tmp/microshift
-      - name: List the contents of cloned repository
-        run: ls 
-        working-directory: ./tmp/microshift
-      - name: Run make on the cloned repo
-        run: go build
-        working-directory: ./tmp/microshift/cmd/microshift
-      - name: List the contents of cloned repository
-        run: ls
-        working-directory: ./tmp/microshift/cmd/microshift
-      - name: Run the binary
-        run: sudo ./microshift run
-        working-directory: ./tmp/microshift/cmd/microshift
+      - name: Check crio service
+        run: sudo systemctl status crio
+#       - name: Git Clone microshift repo
+#         uses: sudosubin/git-clone-action@v1.0.1
+#         with:
+#           repository: openshift/microshift
+#           platform: github
+#           ref: release-4.12
+#           path: tmp/microshift
+#       - name: List the contents of cloned repository
+#         run: ls 
+#         working-directory: ./tmp/microshift
+#       - name: Run make on the cloned repo
+#         run: go build
+#         working-directory: ./tmp/microshift/cmd/microshift
+#       - name: List the contents of cloned repository
+#         run: ls
+#         working-directory: ./tmp/microshift/cmd/microshift
+#       - name: Run the binary
+#         run: sudo ./microshift run
+#         working-directory: ./tmp/microshift/cmd/microshift
       
           
