--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -18,6 +18,8 @@ jobs:
       - run: echo "🍏 This job's status is ${{ job.status }}."
       - name: Print CWD
         run: echo "$PWD"
+      - name: Install crio
+        run: sudo apt install cri-o cri-o-runc -y
       - name: Check crio service
         run: sudo systemctl status crio
 #       - name: Git Clone microshift repo
