--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -27,7 +27,7 @@ jobs:
           curl -L https://download.opensuse.org/repositories/devel:/kubic:/libcontainers:/stable/xUbuntu_20.04/Release.key | sudo apt-key add -
 
           sudo apt-get update
-          sudo apt install cri-o cri-o-runc -y
+          sudo apt-get install cri-o cri-o-runc -y
       - name: Check crio service
         run: sudo systemctl status crio
 #       - name: Git Clone microshift repo
