--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -31,8 +31,12 @@ jobs:
         run: |
           sudo apt update
           sudo apt install cri-o cri-o-runc -y
-#       - name: Check crio service
-#         run: sudo systemctl status crio
+      - name: Start crio
+        run: |
+          sudo systemctl start crio
+          sudo systemctl enable crio
+      - name: Check crio service
+        run: sudo systemctl status crio
 #       - name: Git Clone microshift repo
 #         uses: sudosubin/git-clone-action@v1.0.1
 #         with:
