--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -46,15 +46,15 @@ jobs:
           path: ${{ github.workspace }}/tmp/microshift
       - name: List the contents of cloned repository
         run: ls 
-        working-directory: ${{ github.workspace }}/tmp/microshift
+        working-directory: .${{ github.workspace }}/tmp/microshift
       - name: Run make on the cloned repo
         run: go build
-        working-directory: ${{ github.workspace }}/tmp/microshift/cmd/microshift
+        working-directory: .${{ github.workspace }}/tmp/microshift/cmd/microshift
       - name: List the contents of cloned repository
         run: ls
-        working-directory: ${{ github.workspace }}/tmp/microshift/cmd/microshift
+        working-directory: .${{ github.workspace }}/tmp/microshift/cmd/microshift
       - name: Run the binary
         run: sudo ./microshift run
-        working-directory: ${{ github.workspace }}/tmp/microshift/cmd/microshift
+        working-directory: .${{ github.workspace }}/tmp/microshift/cmd/microshift
       
           
