--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -42,7 +42,7 @@ jobs:
         with:
           repository: openshift/microshift
           platform: github
-          ref: 3db9e81
+          ref: release-4.12
           path: tmp/microshift
       - name: List the contents of cloned repository
         run: ls 
