--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -55,3 +55,11 @@ jobs:
           release_name: "v${{github.event.inputs.tag}}"
           draft: false
           prerelease: false
+
+      - name: "✏️ Generate release changelog"
+        uses: heinrichreimer/action-github-changelog-generator@v2.4
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }} 
+
+
+
