feat: use different way to generate changelog(take 4)
Signed-off-by: Vibhu Prashar <vibhu.sharma2929@gmail.com>

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -47,9 +47,9 @@ jobs:
        
       - name: "✏️ Generate release changelog"
         id: generate-release-changelog
-        uses: heinrichreimer/action-github-changelog-generator@v2.4
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+        uses: Bullrich/generate-release-changelog@master
+        env:
+          REPO: ${{ github.repository }}
 
       - name: Create Release
         id: create_release
