test: add custom workflow to run based upon comment on PR(take 4)
Signed-off-by: Vibhu Prashar <vibhu.sharma2929@gmail.com>

--- a/.github/workflows/custom-test.yaml
+++ b/.github/workflows/custom-test.yaml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   test:
-    if: github.event.issue.pull_request && toLower(github.event.comment.body) == 'test'
+    if: github.event.issue.pull_request && github.event.comment.body | toLower == '/test'
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
