--- a/.github/workflows/custom-test.yaml
+++ b/.github/workflows/custom-test.yaml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   test:
-    if: github.event.issue.pull_request && github.event.comment.body | toLower == '/test'
+    if: github.event.issue.pull_request && github.event.comment.body == '/test'
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
