test: add custom workflow to run based upon comment on PR(take 6)
Signed-off-by: Vibhu Prashar <vibhu.sharma2929@gmail.com>

--- a/.github/workflows/custom-test.yaml
+++ b/.github/workflows/custom-test.yaml
@@ -13,3 +13,8 @@ jobs:
 
       - name: Test step
         run: echo "This is a test"
+
+      - name: Call workflow
+        uses: vprashar2929/kepler/.github/workflows/dummy.yml@main
+        with:
+          pr: "1234"
