test: add custom workflow to run based upon comment on PR(take 8)
Signed-off-by: Vibhu Prashar <vibhu.sharma2929@gmail.com>

--- a/.github/workflows/custom-test.yaml
+++ b/.github/workflows/custom-test.yaml
@@ -6,6 +6,13 @@ on:
 jobs:
   test:
     if: github.event.issue.pull_request && github.event.comment.body == '/test'
-    uses: vprashar2929/kepler/.github/workflows/dummy.yml@main
-    with:
-      pr: "1234"
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Test step
+        run: echo "This is a test"
+
+      - name: get the pr number
+        run: echo "${{ github.event.pull_request.number }}"
