test: add custom workflow to run based upon comment on PR(take 9)
Signed-off-by: Vibhu Prashar <vibhu.sharma2929@gmail.com>

--- a/.github/workflows/custom-test.yaml
+++ b/.github/workflows/custom-test.yaml
@@ -15,4 +15,4 @@ jobs:
         run: echo "This is a test"
 
       - name: get the pr number
-        run: echo "${{ github.event.pull_request.number }}"
+        run: echo "${{ github.event.number }}"
