--- a/.github/workflows/custom-test.yaml
+++ b/.github/workflows/custom-test.yaml
@@ -15,8 +15,8 @@ jobs:
         run: echo "This is a test"
 
       - name: get the pr number
-        run: echo "pr_number=${{ github.event.issue.pull_request.number }}"
+        run: echo "pr_number=${{ github.event.pull_request.head.sha }}"
 
-      - name: get the pr number
-        run: echo "pr_number=${{ github.event.pull_request.number }}"
+      - name: Check Event JSON
+        run: echo "${{ toJson(github.event) }}"
 
