test: add custom workflow to run based upon comment on PR(take 12)
Signed-off-by: Vibhu Prashar <vibhu.sharma2929@gmail.com>

--- a/.github/workflows/custom-test.yaml
+++ b/.github/workflows/custom-test.yaml
@@ -15,7 +15,7 @@ jobs:
         run: echo "This is a test"
 
       - name: get the pr number
-        run: echo "pr_number=${{ github.event.pull_request.head.sha }}"
+        run: echo "pr_number=${{ github.event.issue.number }}"
 
       - name: Check Event JSON
         run: echo "${{ toJson(github.event) }}"
