--- a/.github/workflows/custom-test.yaml
+++ b/.github/workflows/custom-test.yaml
@@ -18,6 +18,14 @@ jobs:
         with:
           ref: ${{ steps.comment-branch.outputs.head_ref }}
 
+      - name: Check if Github organization is set
+        run: |
+          if [ -n "${{ github.organization }}" ]; then
+            echo "organization=${{ github.organization }}
+          else
+            echo "Github organization is not set"
+          fi
+
       - name: Set latest commit status as pending
         uses: myrotvorets/set-commit-status-action@master
         with:
