test: add custom workflow to run based upon comment on PR(take 16)
Signed-off-by: Vibhu Prashar <vibhu.sharma2929@gmail.com>

--- a/.github/workflows/custom-test.yaml
+++ b/.github/workflows/custom-test.yaml
@@ -21,7 +21,7 @@ jobs:
       - name: Check if Github organization is set
         run: |
           if [ -n "${{ github.organization }}" ]; then
-            echo "organization=${{ github.organization }}
+            echo "organization=${{ github.organization }}"
           else
             echo "Github organization is not set"
           fi
